# tiltlib

./: .buildinfo  .gitignore  README.md  api.html  contribution.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  usage.html
.github/workflows/: docs.yml  publish.yaml  test.yaml
_modules/: index.html
_modules/tiltlib/: axis.html  sample.html  sample_holder.html
_sources/tutorials/: basic_usage.ipynb.txt
docs/source/: _usage.rst  api.rst  conf.py  contribution.rst  index.rst  usage.rst
docs/source/_templates/: custom-class-template.rst
docs/source/tutorials/: basic_usage.ipynb  tilt_axis_identification.ipynb  zone_axis_alignment.ipynb
examples/: tilt_axis_identification.ipynb  zone_axis_alignment.ipynb
src/tiltlib/: __main__.py  axis.py  sample.py  sample_holder.py
tests/: conftest.py  test_rotation_generators.py  test_sample.py  test_sampleholder.py  utils.py
tiltlib/: pyproject.toml  pytest.ini
tiltlib/src/tiltlib/: __init__.py  axis.py  io.py  rotation_generator.py  sample.py  sample_holder.py
tiltlib/tests/: test_axis.py  test_rotation_generators.py  test_rotationholder.py  test_sample.py  test_sampleholder.py  tests.py  utils.py
tiltlib/tiltlib/: sample_holder.py
tutorials/: basic_usage.html  basic_usage.ipynb  tilt_axis_identification.html  zone_axis_alignment.html  zone_axis_alignment.ipynb
