[project]
name = "tiltlib"
version = "0.0.1"
authors = [
  { name="Viljar Femoen", email="author@example.com" },
]
description = "TEM tilt holder scripts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "orix",
    "pyyaml"
]


[project.optional-dependencies]
test = ["pytest", "tqdm", "scipy"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-raP"
